deployment/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classifier
  namespace: web
  labels:
    name: classifier
    app: classifier
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: classifier
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "7070"
      labels:
        app: classifier
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: classifier
        image: saidsef/ml-classifier:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 7070
          protocol: TCP
          name: web
        resources:
          requests:
           memory: "128Mi"
           cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "100m"
        livenessProbe:
          exec:
            command:
              - pgrep
              - python
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 1
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          tcpSocket:
            port: 7070
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 1
          successThreshold: 1
          timeoutSeconds: 3
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          runAsGroup: 65534
          runAsUser: 65534
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
              - SYS_TIME
