deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: classifier
  namespace: web
  labels:
    app: classifier
    tier: frontend
spec:
  type: NodePort
  selector:
    app: classifier
  ports:
  - protocol: TCP
    port: 7070
    targetPort: 7070
    name: web
