deployment/ml-classifier-k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classifier
  namespace: web
  labels:
    name: classifier
    app: classifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: classifier
  template:
    metadata:
      labels:
        app: classifier
    spec:
      containers:
      - name: classifier
        image: saidsef/ml-classifier:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 7070
          name: web
       resources:
          requests:
           memory: "128Mi"
           cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        livenessProbe:
          tcpSocket:
            port: 7070
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: classifier
  namespace: web
  labels:
    app: classifier
    tier: frontend
spec:
  type: NodePort
  selector:
    app: classifier
  ports:
  - protocol: TCP
    port: 7070
    targetPort: 7070
    name: web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: classifier
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, If-Modified-Since"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server_tokens off;
      location /metrics {
        deny all;
        return 301 /;
      }
spec:
  rules:
  - host: ml.saidsef.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: classifier
          servicePort: 7070
